<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012 - 2013 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">RunnerUp</string>
    <string name="Google_Play_Services_Legal_Notices">Google Play Services Legal Notices</string>

	<string name="simple_type">Type</string>
	<string-array name="simple_types">
	    <item>Time</item>
	    <item>Distance</item>
   	</string-array>

	<string name="txt_intensity_active">active</string>
	<string name="txt_intensity_resting">rest</string>
	<string name="txt_intensity_warmup">warmup</string>
	<string name="txt_intensity_cooldown">cooldown</string>
	<string name="txt_intensity_repeat">repeat</string>
	
	<string name="txt_dimension_time">time</string>
	<string name="txt_dimension_distance">distance</string>
	<string name="txt_dimension_speed">speed</string>
	<string name="txt_dimension_pace">pace</string>
	<string name="txt_dimension_heartrate">heartrate</string>
	<string name="txt_dimension_heartratezone">heartrate zone</string>
		
	<string name="txt_distance_kilometer">kilometer</string>
	<string name="txt_distance_kilometers">kilometers</string>
	<string name="txt_distance_mile">mile</string>
	<string name="txt_distance_miles">miles</string>
	<string name="txt_distance_meter">meter</string>
	<string name="txt_distance_meters">meters</string>

	<string name="txt_distance_km">km</string>
	<string name="txt_distance_mi">mi</string>
	<string name="txt_distance_m">m</string>
	
	<string name="txt_elapsed_h">h</string>
	<string name="txt_elapsed_m">m</string>
	<string name="txt_elapsed_min">min</string>
	<string name="txt_elapsed_s">s</string>

	<string name="txt_heartrate_bpm">bpm</string>
	
	<string name="sex">Sex</string>
	<string-array name="sexes">
	    <item>Male</item>
	    <item>Female</item>
   	</string-array>

	<string-array name="targetEntries">
	    <item>none</item>
	    <item>pace</item>
	    <item>heart rate zone</item>
	</string-array>
	
	<string name="account_list_name_txt">FunBeat</string>
	<string name="account_list_upload_box">upload</string>
	<string name="account_list_feed_box">feed</string>
	<string name="account_list_configure_button_btn">Configure</string>
	<string name="account_list_name_txt">FunBeat</string>
	<string name="disconnect_account_button_btn">Disconnect</string>
	<string name="account_upload_button_btn">Upload</string>
	<string name="ok_account_button_btn">OK</string>
	<string name="total_time_txt">Time</string>
	<string name="total_distance_txt">Distance</string>
	<string name="total_pace_txt">Pace</string>
	<string name="text_view01_txt">Total</string>
	<string name="activity_time_txt">32:57</string>
	<string name="activity_distance_txt">8.34</string>
	<string name="activity_pace_txt">4:34</string>
	<string name="resume_button_btn">Resume</string>
	<string name="save_button_btn">Save activity</string>
	<string name="discard_button_btn">Discard activity</string>
	<string name="feed_activity_source_txt">TextView</string>
	<string name="feed_activity_header_txt">TextView</string>
	<string name="feed_activity_summary_txt">TextView</string>
	<string name="feed_activity_notes_txt">TextView</string>
	<string name="feed_activity_date_header_txt">TextView</string>
	<string name="feed_status_txt">TextView</string>
	<string name="feed_account_button_btn">Configure accounts</string>
	<string name="refresh_feed_button_btn">Refresh</string>
	<string name="zonetext_txt">Zone 1 0-59%</string>
	<string name="zonefiller1_txt">0000</string>
	<string name="zonefiller2_txt">0000</string>
	<string name="zonefiller3_txt">0000</string>
	<string name="hrz_age">Age</string>
	<string name="hrz_sex">Sex</string>
	<string name="hrz_mhr">Maximum heart rate (MHR)</string>
	<string name="history_list_sport_txt">Running</string>
	<string name="history_list_time_txt">Time</string>
	<string name="history_list_distance_txt">Distance</string>
	<string name="history_list_pace_txt">Pace</string>
	<string name="history_list_id_txt">id</string>
	<string name="total_time_txt">Device</string>
	<string name="total_pace_txt">Heart rate</string>
	<string name="hr_device_txt">Polar H7</string>
	<string name="hr_log_txt">TextView</string>
	<string name="scan_button_btn">Scan</string>
	<string name="connect_button_btn">Connect</string>
	<string name="lap_list_id_txt">id</string>
	<string name="lap_list_time_txt">Time</string>
	<string name="lap_list_distance_txt">Distance</string>
	<string name="lap_list_pace_txt">Pace</string>
	<string name="lap_list_hr_txt">Hr</string>
	<string name="download_workout_name_txt">Tröskel</string>
	<string name="download_workout_button_btn">Download</string>
	<string name="share_workout_button_btn">Share</string>
	<string name="delete_workout_button_btn">Delete</string>
	<string name="account_id_txt">id</string>
	<string name="account_name_txt">account</string>
	<string name="report_sent_box">Upload</string>
	<string name="text_view03_txt">Time</string>
	<string name="text_view04_txt">Distance</string>
	<string name="activity_speed_pace_txt">Pace</string>
	<string name="activity_header_hr_txt">Hr</string>
	<string name="text_view01_txt">Total</string>
	<string name="activity_time_txt">32:57</string>
	<string name="activity_distance_txt">8.34</string>
	<string name="activity_pace_txt">4:34</string>
	<string name="activity_hr_txt">173</string>
	<string name="text_view01_txt">Interval</string>
	<string name="interval_time_txt">20:34</string>
	<string name="intervall_distance_txt">5.67</string>
	<string name="interval_pace_txt">4:24</string>
	<string name="interval_hr_txt">184</string>
	<string name="text_view01_txt">Lap</string>
	<string name="lap_time_txt">2:34</string>
	<string name="lap_distance_txt">0.67</string>
	<string name="lap_pace_txt">4:14</string>
	<string name="lap_hr_txt">155</string>
	<string name="new_lap_button_btn">New lap</string>
	<string name="pause_button_btn">Pause</string>
	<string name="stop_button_btn">Stop</string>
	<string name="settings_spinner">Audio cue settings</string>
	<string name="button1_btn">Button</string>
	<string name="advanced_audio_cue_spinner">Audio cue settings</string>
	<string name="advanced_workout_spinner">Workout</string>
	<string name="advanced_download_button_btn">Download workouts</string>
	<string name="basic_audio_cue_spinner">Audio cue settings</string>
	<string name="basic_sport">Sport</string>
	<string name="tab_basic_goal_box">Goal</string>
	<string name="basic_type">Goal type</string>
	<string name="basic_distance">Goal distance (km)</string>
	<string name="basic_time">Goal time (HH:MM:SS)</string>
	<string name="tab_basic_target_type">Target</string>
	<string name="tab_basic_target_pace_max">Target pace (HH:MM:SS)</string>
	<string name="tab_basic_target_hrz">Target heart rate zone</string>
	<string name="interval_audio_cue_spinner">Audio cue settings</string>
	<string name="interval_type">Interval type</string>
	<string name="interval_time">Interval time (HH:MM:SS)</string>
	<string name="interval_distance">Interval distance (m)</string>
	<string name="interval_rest_type">Rest type</string>
	<string name="interval_rest_time">Rest time (HH:MM:SS)</string>
	<string name="interval_rest_distance">Rest distance (m)</string>
	<string name="interval_repetitions">Repetitions</string>
	<string name="interval_warmup_box">Warmup</string>
	<string name="interval_cooldown_box">Cooldown</string>
	<string name="manual_date">Date</string>
	<string name="manual_time">Time</string>
	<string name="manual_duration">Duration (HH:MM:SS)</string>
	<string name="manual_distance">Distance</string>
	<string name="manual_pace">Pace</string>
	<string name="gps_info_text_txt">GPS satellites: </string>
	<string name="gps_info1_txt">0</string>
	<string name="gps_info2_txt">0</string>
	<string name="start_button_btn">Start GPS</string>
	<string name="step_intensity_txt">Cooldown</string>
	<string name="step_duration_type_txt">Duration</string>
	<string name="step_duration_value_txt">3 min</string>
	<string name="text_view03_txt">1234567</string>
	<string name="step_goal_type_txt">Pace</string>
	<string name="step_goal_value_txt">4:00 - 4:15 min/km</string>
	<string name="step_type">Intensity</string>
	<string name="step_duration_type">Duration type</string>
	<string name="step_duration_time">Duration time (HH:MM:SS)</string>
	<string name="step_duration_distance">Duration distance (m)</string>
	<string name="step_target_type">Target type</string>
	<string name="step_target_pace">Target pace MM:SS/km</string>
	<string name="button1_btn">OK</string>
	<string name="button2_btn">OK</string>
	<string name="button3_btn">Cancel</string>
	<string name="value_txt">value</string>
	<string name="upload_list_start_time_txt">2013-08-12</string>
	<string name="upload_list_sport_txt">Running</string>
	<string name="upload_list_time_txt">Time</string>
	<string name="upload_list_distance_txt">Distance</string>
	<string name="upload_list_pace_txt">Pace</string>
	<string name="account_upload_list_name_txt">FunBeat</string>
	<string name="account_upload_set_all_btn">Select all</string>
	<string name="account_upload_clear_all_btn">Clear all</string>
	<string name="account_upload_button_btn">Upload</string>
	<string name="text_view1_txt">Username</string>
	<string name="text_view01_txt">Password</string>
	<string name="showpass_box">Show password</string>
	<string name="step_intensity_txt">intensity</string>
	<string name="step_duration_type_txt">distance</string>
	<string name="step_duration_value_txt">6000 m</string>
	<string name="step_pace_txt">4:05 - 4:25</string>
	<string name="feed_activity_source_txt">TextView</string>
	<string name="feed_activity_header_txt">TextView</string>
	<string name="feed_activity_summary_txt">TextView</string>
	<string name="feed_activity_notes_txt">TextView</string>
</resources>
