<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:runnerup="http://schemas.android.com/apk/res/org.runnerup"
    android:id="@+id/tab_basic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<org.runnerup.widget.TitleSpinner
        android:id="@+id/basic_audio_cue_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="basicAudio"
		android:text="@string/basic_audio_cue_spinner"
		runnerup:type="spinner_txt"/>
    
    <org.runnerup.widget.TitleSpinner
        android:id="@+id/basic_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sportEntries"
        android:key="basic_sport"
        android:prompt="@string/simple_type"
        android:text="@string/basic_sport" />
	
	<CheckBox
        android:visibility="gone"
        android:id="@+id/tab_basic_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/tab_basic_goal_box" />

    <org.runnerup.widget.TitleSpinner
        android:visibility="gone"
        android:id="@+id/basic_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/simple_types"
        android:key="basic_type"
        android:prompt="@string/simple_type"
        android:text="@string/basic_type" />

    <org.runnerup.widget.TitleSpinner
        android:visibility="gone"
        android:id="@+id/basic_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="5.0"
        android:inputType="number|numberDecimal"
        android:key="basic_distance"
        android:prompt="@string/simple_type"
        android:text="@string/basic_distance"
        runnerup:type="edittext" />

    <org.runnerup.widget.TitleSpinner
        android:visibility="gone"
        android:id="@+id/basic_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="30:00"
        android:inputType="time"
        android:key="basic_time"
        android:prompt="@string/simple_type"
        android:text="@string/basic_time"
        runnerup:type="durationpicker" />

    <org.runnerup.widget.TitleSpinner
        android:key="basicTargetType"
        android:id="@+id/tab_basic_target_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/simple_type"
        android:entries="@array/targetEntries"
        android:text="@string/tab_basic_target_type" />
    
    <org.runnerup.widget.TitleSpinner
        android:id="@+id/tab_basic_target_pace_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="00:05:00"
        android:inputType="time"
        android:key="basic_target_pace_max"
        android:prompt="@string/simple_type"
        android:text="@string/tab_basic_target_pace_max"
        runnerup:type="durationpicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/tab_basic_target_hrz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:key="basic_target_hrz"
        android:prompt="@string/simple_type"
        android:text="@string/tab_basic_target_hrz"
        android:visibility="gone" />
</LinearLayout>
