<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 jonas.oreland@gmail.com
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:runnerup="http://schemas.android.com/apk/res/org.runnerup"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/tab_interval"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/intensity_types"
        android:prompt="@string/simple_type"
        android:text="@string/step_type" >
    </org.runnerup.widget.TitleSpinner>

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_duration_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/duration_types"
        android:prompt="@string/simple_type"
        android:text="@string/step_duration_type" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_duration_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="00:01:00"
        android:inputType="time"
        android:prompt="@string/simple_type"
        android:text="@string/step_duration_time"
        runnerup:type="durationpicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_duration_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="1000"
        android:inputType="numberDecimal"
        android:prompt="@string/simple_type"
        android:text="@string/step_duration_distance"
        runnerup:type="distancepicker" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_target_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/target_types"
        android:prompt="@string/simple_type"
        android:text="@string/step_target_type" />

    <org.runnerup.widget.TitleSpinner
        android:id="@+id/step_target_pace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="5:00 - 5:30"
        android:inputType="time"
        android:prompt="@string/simple_type"
        android:text="@string/step_target_pace"
        runnerup:type="durationpicker" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/OK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:text="@string/OK_btn"
            style="@style/ButtonText"
        	android:background="@drawable/btn_green"/>

        <Button
            android:id="@+id/OK2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/OK_btn" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:layout_weight="1"
            android:text="@string/cancel_btn"
            style="@style/ButtonText"
        	android:background="@drawable/btn_red"/>


    </LinearLayout>

</LinearLayout>
